AV2- Adicionando campos
incluindo os 2 campos, CPF e E-mail.

--- a/Menu.html
+++ b/Menu.html
@@ -2,9 +2,11 @@
 
 <p>&nbsp;</p>
 <p>Pizza: Pizza Alegre:&nbsp;</p>
-<p>Versao 001 </p>
+<p>Versao 002 </p>
 <p>Operador: &nbsp;</p>
 <p>&nbsp;</p>
 <p>Telefone:</p>
 <p>Cliente: </p>
+<p>CPF:</p>
+<p>E-mail: </p>
 <p>&nbsp;</p>
